--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 PROFECO en R.</p>
 <pre><code>## Hoy es: 20273</code></pre>
 <div class="banner2">
-<p><img src="imagenes/banner2.jpg" class="img-responsive center-block" alt="Banner principal"></p>
+<p><img src="imagenes/banner2.JPG" class="img-responsive center-block" alt="Banner principal"></p>
 </div>
 </div>
 <div id="sección-1" class="section level1" number="1">
